--- a/19-NavigationParticipation/ModuleA/Views/ViewB.xaml
+++ b/19-NavigationParticipation/ModuleA/Views/ViewB.xaml
@@ -1,10 +1,32 @@
 ﻿<UserControl x:Class="ModuleA.Views.ViewB"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:prism="http://prismlibrary.com/"
+             xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <StackPanel>
-        <TextBlock Text="{Binding Title}" FontSize="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <TextBlock Text="{Binding PageViews}" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    </StackPanel>
+
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+        <StackPanel Grid.Row="0">
+            <TextBlock Text="{Binding Title}"
+                       FontSize="48"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center" />
+            <TextBlock Text="{Binding PageViews}"
+                       FontSize="24"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center" />
+        </StackPanel>
+
+        <telerik:RadGridView ItemsSource="{Binding MessageTexts}"
+                             Grid.Row="1" />
+
+        <telerik:RadBusyIndicator IsBusy="{Binding IsBusy}"
+                                  Grid.Row="2" />
+    </Grid>
 </UserControl>
